--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,107 @@
-fastapi[all]
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asttokens==2.4.1
+bcrypt==4.0.1
+blobfile==3.0.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+debugpy==1.8.11
+decorator==5.1.1
+distro==1.9.0
+dnspython==2.7.0
+ecdsa==0.19.0
+email_validator==2.2.0
+executing==2.1.0
+fake-bpy==0.1.0
+fake-bpy-module-latest==20241124
+fastapi==0.115.6
+fastapi-cli==0.0.7
+fastapi-jwt-auth==0.5.0
+filelock==3.16.1
+fire==0.7.0
+fonttools==4.55.2
+fsspec==2024.10.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.27.2
+huggingface-hub==0.26.2
+icecream==2.1.3
+idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
+Jinja2==3.1.4
+jose==1.0.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.7
+llama_models==0.0.55
+llama_stack==0.0.55
+llama_stack_client==0.0.55
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+nest-asyncio==1.6.0
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+passlib==1.7.4
+pillow==11.0.0
+platformdirs==4.3.6
+playwright==1.49.1
+prompt_toolkit==3.0.48
+psutil==6.1.1
+pure_eval==0.2.3
+pyaml==24.9.0
+pyasn1==0.6.1
+pycryptodomex==3.21.0
+pydantic==2.10.1
+pydantic_core==2.27.1
+pyee==12.0.0
+Pygments==2.18.0
+PyJWT==1.7.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.20
+pytz==2024.2
+pywin32==308
+PyYAML==6.0.2
+pyzmq==26.2.0
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rich-toolkit==0.12.0
+rsa==4.9
+setuptools==75.6.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+stack-data==0.6.3
+starlette==0.41.3
+termcolor==2.5.0
+tiktoken==0.8.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.15.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.34.0
+watchfiles==1.0.3
+wcwidth==0.2.13
+websockets==14.1
